[package]
name = "nederlandskie"
version = "0.1.0"
edition = "2021"
default-run = "nederlandskie"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
atrium-api = "0.11.0"
atrium-xrpc = "0.4.1"
axum = "0.6.20"
chat-gpt-lib-rs = "0.2.1"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.29"
http = "0.2.9"
libipld-core = { version = "0.16.0", features = ["serde-codec"] }
lingua = "1.5.0"
log = "0.4.20"
once_cell = "1.18.0"
rs-car = "0.4.1"
scooby = "0.5.0"
serde = "1.0.190"
serde_ipld_dagcbor = "0.4.2"
sk-cbor = "0.1.2"
sqlx = { version = "0.7.2", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
