[package]
name = "nederlandskie"
version = "0.1.0"
edition = "2021"
default-run = "nederlandskie"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
atrium-api = "0.24.2"
atrium-xrpc = "0.11.3"
atrium-xrpc-client = "0.5.6"
axum = "0.7.5"
chat-gpt-lib-rs = "0.5.1"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
http = "1.1.0"
ipld-core = "0.4.1"
lingua = "1.6.2"
log = "0.4.22"
once_cell = "1.19.0"
rs-car = "0.4.1"
scooby = "0.5.0"
serde = "1.0.208"
serde_ipld_dagcbor = "0.6.1"
sk-cbor = "0.1.2"
sqlx = { version = "0.8.0", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = "0.1.15"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
