[package]
name = "nederlandskie-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
atrium-api = "0.24.2"
atrium-xrpc = "0.11.3"
atrium-xrpc-client = "0.5.6"
chat-gpt-lib-rs = "0.5.1"
chrono = "0.4.38"
dotenv = "0.15.0"
http = "1.1.0"
ipld-core = "0.4.1"
log = "0.4.22"
once_cell = "1.19.0"
rs-car = "0.4.1"
scooby = "0.5.0"
serde = "1.0.208"
serde_ipld_dagcbor = "0.6.1"
sk-cbor = "0.1.2"
sqlx = { version = "0.8.0", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.16"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
