[package]
name = "nederlandskie-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
atrium-api = "0.25.8"
atrium-xrpc = "0.12.4"
atrium-xrpc-client = "0.5.15"
reqwest = { version = "0.13", features = ["json", "native-tls"] }
serde_json = "1.0"
chrono = "0.4.44"
dotenv = "0.15.0"
http = "1.4.0"
ipld-core = "0.4.3"
log = "0.4.29"
once_cell = "1.21.4"
rs-car = "0.5.0"
scooby = "0.5.0"
serde = "1.0.228"
serde_ipld_dagcbor = "0.6.4"
sk-cbor = "0.1.2"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
