[package]
name = "nederlandskie-feed-server"
version = "0.0.0"
publish = false
edition = "2024"

[dependencies]
nederlandskie-core = { path = "../../core" }
anyhow = "1.0.102"
async-trait = "0.1.89"
atrium-api = "0.25.8"
atrium-xrpc = "0.12.4"
atrium-xrpc-client = "0.5.15"
axum = "0.8.9"
axum-prometheus = "0.10"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.10"
http = "1.4.0"
ipld-core = "0.4.3"
log = "0.4.29"
askama = "0.16"
serde = "1.0.228"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
