[package]
name = "nederlandskie-janitor"
version = "0.1.0"
edition = "2021"

[dependencies]
nederlandskie-core = { path = "../../core" }
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = "0.4.44"
env_logger = "0.11.10"
log = "0.4.29"
metrics = "0.24.5"
metrics-exporter-prometheus = "0.18.2"
tokio = { version = "1.52.1", features = ["full"] }
